# hescapedna

./: .cruft.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGFIXES.md  LICENSE  README.md  download.py  hescape_results.md  pyproject.toml  verify_gradients.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
.ipynb_checkpoints/: environment-checkpoint.yml
data/human-5k-panel/: nicheformer_reference.h5ad  test.csv  train.csv  val.csv
data/human-breast-panel/: nicheformer_reference.h5ad  paired_w_addon.csv  test.csv  train.csv  val.csv
data/human-colon-panel/: nicheformer_reference.h5ad  test.csv  train.csv  val.csv
data/human-immuno-oncology-panel/: nicheformer_reference.h5ad  test.csv  train.csv  val.csv
data/human-lung-healthy-panel/: nicheformer_reference.h5ad  test.csv  train.csv  val.csv
data/human-multi-tissue-panel/: nicheformer_reference.h5ad  test.csv  train.csv  val.csv
data/human-skin-panel/: nicheformer_reference.h5ad  train.csv  val.csv
data/new-wsi-dnameth/test/: index_tile.jsonl
data/new-wsi-dnameth/train/: index_tile.jsonl
data/wsi_dnameth/test/: index.jsonl
data/wsi_dnameth_preprocess/: 01_get_index.py  02_download_files_from_index.py  03_tile_slides.py  04_validate_tiles.py  download_cpgpt.py
docs/: api.md  conf.py  contributing.md
docs/notebooks/: example.ipynb
experiments/: running_sweeps.md
experiments/configs/: core_config_pan_5k.yaml  holy_grail_breast.yaml  holy_grail_colon.yaml  holy_grail_immuno_oncology.yaml  holy_grail_lung_healthy.yaml  holy_grail_multi_tissue.yaml  holy_grail_pan_5k.yaml  local_config.yaml
experiments/configs/.ipynb_checkpoints/: core_config_colon-checkpoint.yaml  local_config-Copy1-checkpoint.yaml  local_config-Copy2-checkpoint.yaml  local_config-checkpoint.yaml
experiments/configs/datamodule/: breast.yaml  colon.yaml  dnameth_wsi.yaml  immuno_oncology.yaml  multi_tissue.yaml  pan_5k.yaml  skin.yaml
experiments/configs/launcher/: denbi.yaml  icb.yaml  juelich.yaml  local.yaml
experiments/configs/model/: default.yaml
experiments/configs/paths/: denbi.yaml  icb.yaml  juelich.yaml
experiments/eval_configs/: embed.yaml  evaluate.yaml
experiments/evaluation/: README.md  config.yaml  embed.py  embed.yaml  evaluate.py  evaluate.yaml  prune_index_by_tile.py  run.py
experiments/hescape_pretrain/: holy_grail_breast.bash  holy_grail_immuno_oncology.bash  holy_grail_lung_healthy.bash  holy_grail_multi_tissue.bash  holy_grail_pan_5k.bash  local.bash  train.py
experiments/hescape_pretrain/.ipynb_checkpoints/: holy_grail_colon-checkpoint.bash  train-Copy1-checkpoint.py  train-checkpoint.py
experiments/yaml_configs/: breast_finetune_CLIP.bash  breast_finetune_CLIP.yaml  breast_finetune_SIGLIP.bash  breast_finetune_SIGLIP.yaml  breast_frozen_CLIP.yaml  colon_finetune_CLIP.bash  colon_finetune_SIGLIP.bash  colon_frozen_CLIP.yaml  immuno_oncology_finetune_CLIP.bash  immuno_oncology_finetune_CLIP.yaml  immuno_oncology_finetune_SIGLIP.bash  immuno_oncology_finetune_SIGLIP.yaml  lung_healthy_finetune_CLIP.bash  lung_healthy_finetune_CLIP.yaml  lung_healthy_finetune_SIGLIP.bash  lung_healthy_finetune_SIGLIP.yaml  lung_healthy_frozen_CLIP.yaml  multi_tissue_finetune_CLIP.bash  multi_tissue_finetune_CLIP.yaml  multi_tissue_finetune_SIGLIP.bash  multi_tissue_finetune_SIGLIP.yaml  pan_5k_finetune_CLIP.bash  pan_5k_finetune_CLIP.yaml  pan_5k_finetune_SIGLIP.bash  pan_5k_finetune_SIGLIP.yaml  phase1_colon_frozen_CLIP.bash  skin_finetune.yaml
experiments/yaml_configs/.ipynb_checkpoints/: bench_config-checkpoint.yaml  colon_finetune_CLIP-checkpoint.yaml  colon_finetune_SIGLIP-checkpoint.yaml
notebooks/: image_model_loading.ipynb
related_proj/CpGPT/: .gitignore  LICENSE  README.md  pyproject.toml
related_proj/CpGPT/configs/: eval.yaml  train.yaml
related_proj/CpGPT/configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  stochastic_weight_averaging.yaml
related_proj/CpGPT/configs/data/: default.yaml
related_proj/CpGPT/configs/debug/: overfit.yaml
related_proj/CpGPT/configs/experiment/: template.yaml
related_proj/CpGPT/configs/hparams_search/: cpgpt_optuna.yaml
related_proj/CpGPT/configs/logger/: neptune.yaml  wandb.yaml
related_proj/CpGPT/configs/model/: default.yaml
related_proj/CpGPT/configs/model/net/: large.yaml  small.yaml
related_proj/CpGPT/configs/model/optimizer/: adamw.yaml  adamwschedulefree.yaml  lion.yaml
related_proj/CpGPT/configs/model/scheduler/: constant.yaml  cosine_warmup.yaml
related_proj/CpGPT/configs/model/training/: default.yaml
related_proj/CpGPT/configs/paths/: default.yaml
related_proj/CpGPT/configs/trainer/: default.yaml
related_proj/CpGPT/configs/wandb/: sweep.yaml
related_proj/CpGPT/cpgpt/: eval.py  train.py
related_proj/CpGPT/cpgpt/data/: __init__.py  cpgpt_datamodule.py
related_proj/CpGPT/cpgpt/data/components/: __init__.py  cpgpt_datasaver.py  cpgpt_dataset.py  dna_llm_embedder.py  illumina_methylation_prober.py
related_proj/CpGPT/cpgpt/extras/: brain_dump.py
related_proj/CpGPT/cpgpt/infer/: __init__.py  cpgpt_inferencer.py
related_proj/CpGPT/cpgpt/log/: __init__.py  utils.py
related_proj/CpGPT/cpgpt/loss/: __init__.py  loss.py
related_proj/CpGPT/cpgpt/model/: __init__.py  cpgpt_module.py  cpgpt_module_mortality.py  utils.py
related_proj/CpGPT/cpgpt/model/components/: __init__.py  model.py  modules.py
related_proj/CpGPT/cpgpt/trainer/: __init__.py  cpgpt_trainer.py
related_proj/CpGPT/cpgpt/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
related_proj/CpGPT/tutorials/: predict_mortality.ipynb  quick_setup.ipynb  reference_map.ipynb
related_proj/prov-gigapath/: environment.yaml
related_proj/prov-gigapath/gigapath/: pipeline.py
src/hescape/: __init__.py  _logging.py  constants.py
src/hescape/.ipynb_checkpoints/: _utils-checkpoint.py
src/hescape/data_modules/: __init__.py  dnameth_wsi_dataset.py  image_gexp_dataset.py
src/hescape/evaluation/: __init__.py  data.py  embedder.py  tasks.py
tests/: test_basic.py
(+56 files in other folders)
