[tool.poetry]
name = "CpGPT"
version = "0.0.6"
description = "CpGPT: A Foundation Model for DNA Methylation"
authors = ["Lucas Paulo de Lima Camillo <lucas_camillo@alumni.brown.edu>"]
license = "Non-commercial"
include = ["README.md", ".project-root", "poetry.lock"]
exclude = [
    "tutorials/*",
    "analysis/*",
    "pyaging_data/*",
    "dependencies/*",
    "data/*",
    "tests/*",
    "configs/*",
    "**/.DS_Store",
]

[tool.poetry.urls]
homepage = "https://github.com/lcamillo/CpGPT"
repository = "https://github.com/lcamillo/CpGPT"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
transformers = ">=4.44.2"
torchvision = ">=0.20.1"
lightning = ">=2.2.0"
fastapi = ">=0.112.0,<0.115"
torch = ">=2.2.0,<=2.6.0"
torchmetrics = ">=1.5.2"
torchtune = "0.3.1"
hydra-core = ">=1.3.2"
hydra-colorlog = ">=1.2.0"
rich = ">=13.8.1"
loguru = ">=0.7.2"
pyfaidx = ">=0.8.1.2"
sqlitedict = ">=2.1.0"
biopython = "^1.84"
schedulefree = "^1.4"
rootutils = "^1.0.7"
boto3 = "^1.37.15"
torchao = ">=0.1.0"
ipywidgets = ">=8.1.5"
lifelines = ">=0.29.0"
pyarrow = "20.0.0"

[tool.poetry.group.dev.dependencies]
hydra-optuna-sweeper = ">=1.2.0"
tomli = "^2.2.1"
toml = "^0.10.2"
pyliftover = "^0.4.1"
jupyter = "^1.1.1"
llvmlite = "^0.44.0"
seaborn = ">=0.13.2"
umap-learn = ">=0.5.6"
scienceplots = "^2.1.1"
faiss-cpu = "^1.9.0"
pyaging = ">=0.1.12"
ipykernel = ">=6.29.5"
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
wandb = ">=0.18.0"
sh = ">=2.0.7"
tensorboard = ">=2.17.1"
nvitop = ">=1.3.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"
geoparse = "^2.0.4"
openpyxl = "^3.1.5"
py2cytoscape = "^0.7.1"
biolearn = "^0.6.5"
einops = ">=0.8.0"
pre-commit = ">=3.8.0"
bandit = {extras = ["toml"], version = "^1.8.0"}
docformatter = "^1.7.5"
scperturb = "^0.1.0"
papermill = "^2.6.0"
ete3 = "^3.1.3"
pygraphviz = "^1.14"
pingouin = "^0.5.5"
pybedtools = "^0.11.0"
imageio = "^2.37.0"
pybiomart = "^0.2.0"
gseapy = "^1.1.4"
lion-pytorch = "^0.2.3"
computage = "^0.1.7"
boruta = "^0.4.3"
gdown = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cpgpt-train = "cpgpt.train:main"
cpgpt-eval = "cpgpt.eval:main"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.ruff]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
